--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,12 @@
 {
-    "dbfile": "chessbot.db"
+    "dbfile": "chessbot.db",
+    "callsign": "chess",
+    "commands": {
+        "new_game_open": "newgame",
+        "new_game_challenge": "challenge",
+        "as_white": "aswhite",
+        "as_black": "asblack",
+        "as_random": "asrandom",
+        "as_both": "asboth"
+    }
 }
